Adiciona build automatico